Fixed store header alignment

--- a/css/chops-store.css
+++ b/css/chops-store.css
@@ -20,8 +20,9 @@
 }
 
 .store-heading img:first-of-type {
-    max-width: 100px;
-    margin-top: -25px;
+    max-width: 80px;
+    margin-top: -35px;
+    display: none;
 }
    
 .store-heading img:nth-of-type(2) {
@@ -108,6 +109,12 @@
     margin-top: 20px;
 }
 
+@media (min-width: 475px) {
+    .store-heading img:first-of-type {
+        display: inline-block;
+    }
+}
+
 
 /* CHOPS STORE CSS */
 @media (min-width: 768px) {
@@ -130,6 +137,7 @@
     .store-heading img:first-of-type {
         max-width: 120px;
         margin-top: -45px;
+        display: inline-block;
     }
     
     .store-heading img:nth-of-type(2) {
